@@ -1,3 +1,7 @@
 page[dom_id(@lead)].visual_effect :blind_up, :duration => 0.25
-page[:sidebar].replace_html :partial => "sidebar_index"
-page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
+
+# Update sidebar only when deleting a lead from /leads page.
+if request.referer =~ /leads$/
+  page[:sidebar].replace_html :partial => "sidebar_index"
+  page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
+end
